Fix some responsive issues on small devices

--- a/style.css
+++ b/style.css
@@ -102,4 +102,13 @@ a {
     font-size: 100px;
     line-height: 100px;
   }
+  .media {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 3em;
+  }
+  .media img {
+    margin-bottom: 1em;
+    max-width: 75%;
+  }
 }
